# Clipboard-Manager

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  MACOS_COMPILATION_FIX.md  MACOS_FULLSCREEN_SOLUTION.md  MACOS_INSTALL.md  README-VERSION.md  README.md  cleanup_implementation_summary.md  data_cleanup_guide.md  database_migration_fix.md  generate-icons.md  icon_implementation_summary.md  icon_quality_improvement.md  macOS_permissions_guide.md  package-lock.json  package.json  pnpm-lock.yaml  source_app_display_feature.md  startup_fix_and_cleanup_summary.md  tailwind.config.js  test_auto_start.md  test_cleanup_functionality.md  ultra_high_quality_icons.md  vite.config.ts
.github/workflows/: release.yml
scripts/: release.cjs  sync-version.cjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json  sql-full.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: sql-full.toml
src-tauri/permissions/autogenerated/: add_item_to_group.toml  auto_paste.toml  check_files_exist.toml  cleanup_history.toml  cleanup_old_logs.toml  clear_memory_cache.toml  copy_files_to_clipboard.toml  copy_image_to_clipboard.toml  delete_all_logs.toml  delete_item.toml  ensure_database_compatibility.toml  force_memory_cleanup.toml  generate_thumbnail.toml  get_active_window_info.toml  get_active_window_info_for_clipboard.toml  get_auto_start_status.toml  get_current_log_file.toml  get_file_icon.toml  get_file_metadata.toml  get_files_metadata.toml  get_item_note.toml  get_log_directory.toml  get_log_files.toml  import_data.toml  lan_queue_join.toml  lan_queue_leave.toml  lan_queue_send.toml  lan_queue_start_host.toml  lan_queue_status.toml  load_image_file.toml  open_file_location.toml  open_log_folder.toml  paste_to_clipboard.toml  read_log_file.toml  register_shortcut.toml  reset_database.toml  save_clipboard_image.toml  set_auto_start.toml  smart_paste_to_app.toml  start_new_clipboard_watcher.toml  (+3 more)
src-tauri/src/: commands.rs  icon_cache.rs  lan_queue.rs  lib.rs  logging.rs  macos_paste.rs  macos_window.rs  resource_manager.rs  types.rs  window_info.rs
(+14 files in other folders)
