[package]
name = "Clipboard-Manager"
version = "1.1.5"
description = "A app record clipboard history"
authors = ["Hugh"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
dirs-next = "2"
tauri-plugin-clipboard = "2.1"
base64 = "0.21"
image = "0.24"
tauri-plugin-sql = { version = "2.0.0-rc", features = [
  "sqlite",
  # "postgres",
  # "mysql",
] }
tauri-plugin-global-shortcut = "2"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.45.1", features = ["full"] }
enigo = "0.2"
rdev = "0.4"
# 日志相关依赖
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
tracing-appender = "0.2"
backtrace = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winuser",
  "processthreadsapi",
  "handleapi",
  "psapi",
  "shellapi",
  "combaseapi",
  "objbase",
] }

# 构建优化配置
[profile.dev]
# 开发模式优化，提高编译速度
incremental = true
debug = true
opt-level = 0

[profile.release]
# 发布模式优化
lto = true              # 启用链接时优化
codegen-units = 1       # 使用单个代码生成单元以获得更好的优化
panic = "unwind"        # 使用unwind以支持panic hook和backtrace
strip = false           # 保留调试符号以便异常跟踪
opt-level = "z"         # 优化二进制大小

# 优化依赖编译速度
[profile.dev.package."*"]
opt-level = 2           # 对依赖使用更高的优化级别

[profile.release.package."*"]
opt-level = 3           # 对依赖使用最高优化级别
